--- a/packages/weather.yaml
+++ b/packages/weather.yaml
@@ -217,6 +217,14 @@ group:
 
 
 #####################################################################
+### Input Boolean
+#####################################################################
+input_boolean:
+  rain:
+    name: Rain
+    icon: mdi:weather-rainy
+
+#####################################################################
 ### Input Slider
 #####################################################################
 input_slider:
