--- a/packages/master_bedroom_fan.yaml
+++ b/packages/master_bedroom_fan.yaml
@@ -37,10 +37,9 @@ homeassistant:
     ################################################
     ## Switch
     ################################################
-    switch.master_bedroom_fan_off:
+    switch.master_bedroom_fan:
       assumed_state: false
       friendly_name: "Master Bedroom Fan"
-      haaska_name: "Bedroom Fan"
       icon: mdi:fan
 
     switch.master_bedroom_fan_light:
@@ -86,6 +85,7 @@ homeassistant:
       friendly_name: "Master Bedroom Fan Auto High"
       icon: mdi:fan
 
+
 #####################################################################
 ### Group
 #####################################################################
@@ -93,7 +93,7 @@ group:
   Master Bedroom Fan:
     control: hidden
     entities:
-      - switch.master_bedroom_fan_off
+      - switch.master_bedroom_fan
       - switch.master_bedroom_fan_light
       - input_select.master_bedroom_fan_speed
       - script.mbr_fan_speed_step_low
