--- a/packages/media_players.yaml
+++ b/packages/media_players.yaml
@@ -1,6 +1,6 @@
 #####################################################################
 #    @package          :     media_players
-#    @description      :     media Players and associated automations, scenes, etc.
+#    @description      :     media players and associated automations, scenes, etc.
 #####################################################################
 homeassistant:
   customize:
@@ -28,13 +28,15 @@ homeassistant:
     ################################################
     ## Group
     ################################################
+    group.media_players:
+      <<: *contained
+
+    ################################################
+    ## Media Player
+    ################################################
     media_player.kodi_office:
       <<: *contained
       friendly_name: "Office Kodi"
-
-    media_player.kodi_living_room:
-      <<: *contained
-      friendly_name: "Living Room Kodi"
 
     media_player.kodi_bedroom:
       <<: *contained
@@ -43,10 +45,6 @@ homeassistant:
     media_player.apple_tv:
       <<: *contained
       friendly_name: "Apple TV"
-
-    media_player.rnmcast:
-      <<: *contained
-      friendly_name: "Chromecast"
 
 
 #####################################################################
@@ -58,31 +56,6 @@ group:
       - media_player.kodi_office
       - media_player.apple_tv
     #  - media_player.rnmcast
-
-  Living Room TV:
-    control: hidden
-    entities:
-      - switch.living_room_tv_power
-      - switch.living_room_tv_volume
-      - switch.living_room_tv_mute
-      - input_select.living_room_tv_input
-      - media_player.kodi_living_room
-
-  DirecTV:
-    control: hidden
-    entities:
-      - switch.directv_power
-      - switch.directv_play
-
-  Onkyo Amp:
-    control: hidden
-    entities:
-      - switch.amp_power
-      - switch.amp_volume
-      - switch.amp_mute
-      - input_select.onkyo_amp_input
-      - switch.amp_movie_mode
-      - switch.amp_music_mode
 
 
 #####################################################################
@@ -103,181 +76,7 @@ media_player:
     username: !secret kodi_user
     password: !secret kodi_password
 
-  - platform: kodi
-    host: !secret kodi_living_room
-    port: !secret kodi_other_port
-    name: kodi_living_room
-    username: !secret kodi_user
-    password: !secret kodi_password
-
   - platform: apple_tv
     host: !secret appletv_host
     name: apple_tv
     login_id: !secret appletv_login_id
-
-
-#####################################################################
-### Scene
-#####################################################################
-scene:
-  - name: Movie Time
-    entities:
-      group.entry_lighting:
-        state: off
-        transition: 5
-
-      light.living_room_lamp:
-        state: off
-        transition: 15
-
-      group.living_room_ceiling:
-        state: off
-        transition: 10
-
-
-  - name: Movie Paused
-    entities:
-      light.kitchen_entry:
-        state: on
-        brightness: 50
-        transition: 10
-
-      light.south_entry:
-        state: on
-        brightness: 75
-        transition: 10
-
-      light.center_entry:
-        state: on
-        brightness: 50
-        transition: 10
-
-      light.living_room_lamp:
-        state: on
-        brightness: 75
-        transition: 10
-
-      group.living_room_ceiling:
-        state: on
-        brightness: 50
-        transition: 15
-
-
-  - name: Movie Ended
-    entities:
-      light.kitchen_entry:
-        state: on
-        brightness: 160
-        transition: 30
-
-      light.south_entry:
-        state: on
-        brightness: 100
-        transition: 10
-
-      light.center_entry:
-        state: on
-        brightness: 50
-        transition: 10
-
-      light.living_room_lamp:
-        state: on
-        brightness: 200
-        transition: 60
-
-      group.living_room_ceiling:
-        state: on
-        brightness: 100
-        transition: 30
-
-
-#####################################################################
-### Script
-#####################################################################
-script:
-  tv_power_off:
-    sequence:
-
-    - service: switch.turn_off
-      entity_id: switch.tv_power
-
-    - service: switch.turn_off
-      entity_id: switch.directv_power
-
-
-#####################################################################
-### Automation
-#####################################################################
-automation:
-  - alias: Kodi Scene Set
-    hide_entity: True
-    trigger:
-      - platform: state
-        entity_id: media_player.kodi_living_room
-
-    condition: 
-      - condition: state
-        entity_id: sun.sun
-        state: 'below_horizon'
-
-      - condition: state
-        entity_id: input_boolean.dinner_time
-        state: 'off'
-
-    action:
-      - service: scene.turn_on
-        data_template:
-          entity_id: >-
-            {% if trigger.to_state.state == "playing" or trigger.to_state.state == "resumed" %}
-              scene.movie_time
-            {% elif trigger.to_state.state == "paused" or trigger.to_state.state == "idle" %}
-              scene.movie_paused
-            {% elif trigger.to_state.state == "stopped" or trigger.to_state.state == "ended" %}
-              scene.movie_ended
-            {% else %}
-              scene.living_room_normal
-            {% endif %}
-
-
-  - alias: living_room_tv_input_selector
-    trigger:
-      - platform: state
-        entity_id: input_select.living_room_tv_input
-
-    condition:
-      - condition: template
-        value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
-
-    action:
-# Turn the corresponding switch on to send the fan speed command
-      - service: switch.turn_on
-        data_template:
-          entity_id: "switch.living_room_tv_input_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
-
-# Reset the Input Select to "Select an option..."
-      - service: input_select.select_option
-        data_template:
-          entity_id: "{{ trigger.to_state.entity_id }}"
-          option: Select an option...
-
-
-  - alias: onkyo_amp_input_selector
-    trigger:
-      - platform: state
-        entity_id: input_select.onkyo_amp_input
-
-    condition:
-      - condition: template
-        value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
-
-    action:
-# Turn the corresponding switch on to send the fan speed command
-      - service: switch.turn_on
-        data_template:
-          entity_id: "switch.amp_input_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
-
-# Reset the Input Select to "Select an option..."
-      - service: input_select.select_option
-        data_template:
-          entity_id: "{{ trigger.to_state.entity_id }}"
-          option: Select an option...
