--- a/packages/batteries.yaml
+++ b/packages/batteries.yaml
@@ -30,6 +30,7 @@ homeassistant:
     ################################################
     group.device_status:
       <<: *contained
+      order: 3
 
     ################################################
     ## Sensor
