--- a/packages/billiards_room.yaml
+++ b/packages/billiards_room.yaml
@@ -31,7 +31,7 @@ homeassistant:
     group.billiards_room:
       <<: *contained
       friendly_name: "Billiards Room"
-      #order: 8
+      order: 6
 
     ################################################
     ## Switch
