--- a/packages/cameras.yaml
+++ b/packages/cameras.yaml
@@ -30,6 +30,7 @@ homeassistant:
     ################################################
     group.cameras:
       <<: *contained
+      order: 1
 
 
 #####################################################################
