--- a/packages/locks.yaml
+++ b/packages/locks.yaml
@@ -30,6 +30,7 @@ homeassistant:
     ################################################
     group.door_locks:
       <<: *contained
+      order: 2
 
     ################################################
     ## Lock
