--- a/packages/master_bath.yaml
+++ b/packages/master_bath.yaml
@@ -30,6 +30,7 @@ homeassistant:
     ################################################
     group.master_bath:
       <<: *contained
+      order: 4
 
     ################################################
     ## Cover
