--- a/packages/master_bed_lights.yaml
+++ b/packages/master_bed_lights.yaml
@@ -30,6 +30,7 @@ homeassistant:
     ################################################
     group.master_bed_lights:
       <<: *contained
+      order: 3
 
     ################################################
     ## Light
