--- a/packages/security_sensors.yaml
+++ b/packages/security_sensors.yaml
@@ -26,6 +26,13 @@ homeassistant:
         hidden: true
 
     ################################################
+    ## Group
+    ################################################
+    group.sensors:
+      <<: *contained
+      order: 3
+
+    ################################################
     ## Sensor
     ################################################
     sensor.front_entry_motion:
