--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,262 +5,55 @@ homeassistant:
   elevation: 387
   unit_system: imperial
   time_zone: America/Phoenix
-
-#####################################################################
-### CUSTOMIZATION
-#####################################################################
   packages: !include_dir_named packages
-#  customize: !include_dir_merge_named customize
-#  customize_glob: !include customize_glob.yaml
-#  customize_domain: !include customize_domain.yaml
 
-#####################################################################
-### SERVICES CONFIG
-#####################################################################
-mqtt:
-  broker: !secret broker
-  port: 1883
-  protocol: 3.1
-  client_id: home-assistant-1
-  username: !secret mqtt_user
-  password: !secret mqtt_password
-  discovery: true
-  discovery_prefix: homeassistant
-
-ifttt:
-  key: !secret ifttt_api_key
-
-#####################################################################
-### ZIGBEE CONFIG
-#####################################################################
-#zha:
-#  usb_path: /dev/ttyUSB1
-#  database_path: /home/hass/.homeassistant/zigbee.db
-
-#####################################################################
-### HTTP CONFIG
-#####################################################################
-http:
-  api_password: !secret http_password
-  ssl_certificate: !secret ssl_cert
-  ssl_key: !secret ssl_key
-  trusted_networks:
-    - !secret network_1
-    - !secret network_2
-    - !secret network_3
-    - !secret network_4
-  ip_ban_enabled: true
-  login_attempts_threshold: 5
-
-#####################################################################
-### IOS CONFIG
-#####################################################################
-ios:
-  push:
-    categories:
-      - name: Alarm
-        identifier: 'ALARM'
-        actions:
-          - identifier: 'SOUND_ALARM'
-            title: 'Sound Alarm'
-            activationMode: 'background'
-            authenticationRequired: yes
-            destructive: yes
-            behavior: 'default'
-          - identifier: 'SILENCE_ALARM'
-            title: 'Silence Alarm'
-            activationMode: 'background'
-            authenticationRequired: yes
-            destructive: no
-            behavior: 'textInput'
-            textInputButtonTitle: 'Silencio!'
-            textInputPlaceholder: 'Placeholder'
-
-####################################################
-#                                                  #
-#                     Includes                 #
-#                                                  #
-####################################################
 automation: !include_dir_merge_list automation/
-script: !include_dir_merge_named scripts
 
-
-####################################################
-#                                                  #
-#                     Enables                 #
-#                                                  #
-####################################################
-updater:
-sun:
-conversation:
-frontend:
-#discovery:
 config:
-
-#####################################################################
-### LOGGER
-#####################################################################
-
-logger:
-  default: error
-  logs:
-    homeassistant.components.camera: critical
-    homeassistant.components.switch: debug
-    homeassistant.components.input_slider: debug
-    homeassistant.components.automation: debug
-    homeassistant.components.script: debug
-#    homeassistant.components.cover: debug
-    homeassistant.components.light: debug
-#    homeassistant.components.zwave: debug
-#    homeassistant.components.mqtt: debug
-#    homeassistant.components.device_tracker: debug
-#    homeassistant.components.group: debug
-#    homeassistant.components.sensor: debug
-    homeassistant.components.media_player: critical
-#    homeassistant.components.notify: debug
-#    homeassistant.components.scene: debug
-
-#####################################################################
-### RECORDER
-#####################################################################
-
-recorder:
-  db_url: !secret recorder_db_url
-  purge_days: 5
-  exclude:
-    domains:
-      - camera
-      - media_player
-      - notify
-
-#    entities:
-
-#####################################################################
-### HISTORY
-#####################################################################
-
+conversation:
+#discovery:
+frontend:
+sun:
+updater:
 history:
-  exclude:
-    domains:
-      - camera
-      - input_select
-      - input_slider
-      - media_player
-      - zwave
-
-    entities:
-      - sensor.date__time
-      - sensor.megs_eta
-      - sensor.ricks_eta
-      - sensor.megs_eta_home
-      - sensor.rick_eta_home
-      - sensor.dark_sky_cloud_coverage
-      - sensor.dark_sky_daily_summary
-      - sensor.dark_sky_nearest_storm_distance
-      - sensor.pws_temp_f
-      - sensor.pws_feelslike_string
-      - sensor.pws_precip_today_string
-      - sensor.pws_wind_string
-      - sensor.pws_wind_dir
-      - sensor.pws_heat_index_string
-      - sensor.pws_relative_humidity
-      - sensor.pws_dewpoint_string
-      - sensor.pws_pressure_in
-      - sensor.pws_pressure_mb
-      - sensor.pws_solarradiation
-      - sensor.pws_uv
-      - sensor.pws_observation_time
-      - sensor.pws_visibility_mi
-#      - automation.persistence_publish
-      - automation.random_flux_rgb
-      - automation.rgb_blue
-      - automation.rgb_cool
-      - automation.rgb_cyan
-      - automation.rgb_green
-      - automation.rgb_off
-      - automation.rgb_pink
-      - automation.rgb_red
-      - automation.rgb_violet
-      - automation.rgb_yellow
-
-#####################################################################
-### LOGBOOK
-#####################################################################
-
-logbook:
-  exclude:
-    domains:
-      - camera
-      - media_player
-#      - zwave
-
-    entities:
-      - binary_sensor.fibaro_system_fgms001_motion_sensor_sensor_22_0
-      - sensor.fibaro_system_fgms001_motion_sensor_burglar_22_10
-      - sensor.fibaro_system_fgms001_motion_sensor_general_22_0
-      - sensor.fibaro_system_fgms001_motion_sensor_alarm_level_22_1
-      - sensor.fibaro_system_fgms001_motion_sensor_alarm_type_22_0
-      - sensor.fibaro_system_fgms001_motion_sensor_seismic_intensity_22_25
-      - sensor.fibaro_system_fgms001_motion_sensor_sourcenodeid_22_2
-      - sensor.fibaro_system_fgms001_motion_sensor_luminance_22_3
-      - sensor.fibaro_system_fgms001_motion_sensor_temperature_22_1
-      - sensor.last_boot
-      - sensor.date__time
-      - sensor.megs_eta
-      - sensor.ricks_eta
-      - sensor.megs_eta_home
-      - sensor.rick_eta_home
-      - sensor.dark_sky_cloud_coverage
-      - sensor.dark_sky_daily_summary
-      - sensor.dark_sky_nearest_storm_distance
-#      - sensor.pws_weather
-      - sensor.pws_temp_f
-      - sensor.pws_feelslike_string
-      - sensor.pws_precip_today_string
-      - sensor.pws_wind_string
-      - sensor.pws_wind_dir
-      - sensor.pws_heat_index_string
-      - sensor.pws_relative_humidity
-      - sensor.pws_dewpoint_string
-      - sensor.pws_pressure_in
-      - sensor.pws_pressure_mb
-      - sensor.pws_solarradiation
-      - sensor.pws_uv
-      - sensor.pws_observation_time
-      - sensor.pws_visibility_mi
-      - sensor.peak_hours_status
-#      - automation.persistence_publish
-      - automation.random_flux_rgb
-      - automation.rgb_blue
-      - automation.rgb_cool
-      - automation.rgb_cyan
-      - automation.rgb_green
-      - automation.rgb_off
-      - automation.rgb_pink
-      - automation.rgb_red
-      - automation.rgb_violet
-      - automation.rgb_yellow
-
-## the complete list of domains ##
-#      - automation
-#      - climate
-#      - conversation
-#      - device_tracker
-#      - group
-#      - homeassistant
-#      - ifttt
-#      - input_boolean
+#  exclude:
+#    domains:
+#      - camera
 #      - input_select
 #      - input_slider
-#      - light
-#      - lock
-#      - logbook
 #      - media_player
-#      - mqtt
-#      - notify
-#      - persistent_notification
-#      - scene
-#      - script
-#      - sensor
-#      - switch
 #      - zwave
+
+#    entities:
+#      - sensor.date__time
+#      - sensor.megs_eta
+#      - sensor.ricks_eta
+#      - sensor.megs_eta_home
+#      - sensor.rick_eta_home
+#      - sensor.dark_sky_cloud_coverage
+#      - sensor.dark_sky_daily_summary
+#      - sensor.dark_sky_nearest_storm_distance
+#      - sensor.pws_temp_f
+#      - sensor.pws_feelslike_string
+#      - sensor.pws_precip_today_string
+#      - sensor.pws_wind_string
+#      - sensor.pws_wind_dir
+#      - sensor.pws_heat_index_string
+#      - sensor.pws_relative_humidity
+#      - sensor.pws_dewpoint_string
+#      - sensor.pws_pressure_in
+#      - sensor.pws_pressure_mb
+#      - sensor.pws_solarradiation
+#      - sensor.pws_uv
+#      - sensor.pws_observation_time
+#      - sensor.pws_visibility_mi
+#      - automation.random_flux_rgb
+#      - automation.rgb_blue
+#      - automation.rgb_cool
+#      - automation.rgb_cyan
+#      - automation.rgb_green
+#      - automation.rgb_off
+#      - automation.rgb_pink
+#      - automation.rgb_red
+#      - automation.rgb_violet
+#      - automation.rgb_yellow
