--- a/packages/notify.yaml
+++ b/packages/notify.yaml
@@ -30,7 +30,7 @@ homeassistant:
     ################################################
     group.alerts:
       <<: *contained
-      order: 9
+      order: 4
 
 
 #####################################################################
@@ -49,6 +49,31 @@ notify:
   - platform: pushbullet
     name: pushbullet
     api_key: !secret pushbullet_api_key
+
+
+#####################################################################
+### iOS
+#####################################################################
+ios:
+  push:
+    categories:
+      - name: Alarm
+        identifier: 'ALARM'
+        actions:
+          - identifier: 'SOUND_ALARM'
+            title: 'Sound Alarm'
+            activationMode: 'background'
+            authenticationRequired: yes
+            destructive: yes
+            behavior: 'default'
+          - identifier: 'SILENCE_ALARM'
+            title: 'Silence Alarm'
+            activationMode: 'background'
+            authenticationRequired: yes
+            destructive: no
+            behavior: 'textInput'
+            textInputButtonTitle: 'Silencio!'
+            textInputPlaceholder: 'Placeholder'
 
 
 #####################################################################
