--- a/packages/testing.yaml
+++ b/packages/testing.yaml
@@ -83,9 +83,11 @@ homeassistant:
 group:
   Things:
     entities:
-      - switch.humidifier
       - switch.fountains_switch
-      - switch.outdoor_speakers
+      # outdoor speakers
+      - switch.switch_one
+      # humidifier
+      - switch.switch_two
 
   Triggers:
     control: hidden
