--- a/packages/zones.yaml
+++ b/packages/zones.yaml
@@ -51,7 +51,7 @@ homeassistant:
 ### ZONE
 #####################################################################
 zone:
-  - name: Rick Work
+  - name: Ricks Office
     latitude: !secret latitude_rick_work
     longitude: !secret longitude_rick_work
     radius: 350
